# MAT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure.ac
scripts/: mat-mg
src/: CMakeLists.txt  Makefile.am  mat.cpp  mat.h  mat_alloc_tree.cpp  mat_alloc_tree.h  mat_b2t_main.cpp  mat_config.cpp  mat_config.h  mat_gotcha.cpp  mat_gotcha.h  mat_io.cpp  mat_io.h  mat_ir_pass.cpp  mat_ir_pass.h  mat_reuse_distance.cpp  mat_reuse_distance.h  mat_reuse_distance_main.cpp  mat_util.cpp  mat_util.h
test/: Makefile.am  mat_test_rd.cpp  mat_test_simple.cpp  mat_test_stream.cpp  run.sh
